Fix namespacing in components

--- a/src/components/aftersearch-nav/range.scss
+++ b/src/components/aftersearch-nav/range.scss
@@ -19,7 +19,7 @@ $cs-aftersearch-nav-range_message-color: $color_text-800 !default;
 $cs-aftersearch-nav-range_apply-button-type: 'secondary' !default;
 $cs-aftersearch-nav-range_apply-button-icon-pos: 'no-icon' !default;
 
-.cs-aftersearch-nav-range {
+.#{$ns}aftersearch-nav-range {
     $root: &;
 
     font-size: 1.3rem;
