--- a/src/components/aftersearch-nav/state.scss
+++ b/src/components/aftersearch-nav/state.scss
@@ -11,7 +11,7 @@ $aftersearch-nav-state__text-padding: 1em !default;
 // How many filters need to be at least selected to display "clear all" button.
 $aftersearch-nav-state__item-clear-all-from: 2 !default;
 
-.cs-aftersearch-nav-state {
+.#{$ns}aftersearch-nav-state {
     $root: &;
 
     font-size: 1.4rem;
