--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,7 +10,7 @@ $button-component_icon-pos: $button_default-icon-pos !default;
 $button-component_horizontal-position: 50% !default;
 $button-component_horizontal-translation: translateX(-50%) !default;
 
-.cs-button {
+.#{$ns}button {
     @include button(
         $type: $button-fallback_type,
         $icon_pos: $button-fallback_icon-pos
@@ -31,7 +31,7 @@ $button-component_horizontal-translation: translateX(-50%) !default;
     }
 }
 
-.cs-button-component {
+.#{$ns}button-component {
     @include button(
         $type: $button-component_type,
         $icon_pos: $button-component_icon-pos
