--- a/src/components/overlay/overlay.scss
+++ b/src/components/overlay/overlay.scss
@@ -3,7 +3,9 @@
 //
 // See http://warpspire.com/kss/ for documentation guidelines.
 // Version 0.0.1
-.cs-overlay {
+@import 'config/variables';
+
+.#{$ns}overlay {
     display: none;
 
     position: fixed;
