--- a/src/components/progress-bar/progress-bar.scss
+++ b/src/components/progress-bar/progress-bar.scss
@@ -27,7 +27,7 @@ $progress-bar_text-color: $color_text-400 !default;
 $progress-bar_active-or-completed-text-color: $color_text-800 !default;
 $progress-bar_text-font-size: 1.4rem !default;
 
-.cs-progress-bar {
+.#{$ns}progress-bar {
     $root: &;
     @include reset-list-style();
     counter-reset: progress-bar;
