--- a/src/components/search-results-switcher/search-results-switcher.scss
+++ b/src/components/search-results-switcher/search-results-switcher.scss
@@ -6,7 +6,7 @@ $search-results-switcher_headline-level: $font-size_headline-3 !default;
 $search-results-switcher_count-color: $color-text-300 !default;
 $search-results-switcher_content--active-border: 1px solid $color_alto !default;
 
-.cs-search-results-switcher {
+.#{$ns}search-results-switcher {
     $root: &;
 
     display: none;
