--- a/src/components/separator/separator.scss
+++ b/src/components/separator/separator.scss
@@ -4,7 +4,7 @@
 $separator_color: $color_border-500 !default;
 $separator_style: 1px solid $separator_color !default;
 
-.cs-separator {
+.#{$ns}separator {
     position: relative;
     clear: both;
     border: none;
