--- a/src/components/usps/usps.scss
+++ b/src/components/usps/usps.scss
@@ -18,7 +18,7 @@ $usps_max-image-height: 6.5rem !default;
 $usps_image-margin: 0 auto 1rem !default;
 $usps_show-carousel-arrows: false !default;
 
-.cs-image-teaser {
+.#{$ns}image-teaser {
     $root: &;
 
     &--usps {
